# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pulsing-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Pulsing CLI"

[features]
# Build with `--no-default-features` to disable these defaults
default = ["mistralrs"]
mistralrs = ["dep:dynamo-engine-mistralrs"]

cuda = ["dynamo-engine-mistralrs/cuda"]
metal = ["dynamo-engine-mistralrs/metal"]

tokio-console = ["dynamo-runtime/tokio-console"]

[dependencies]
dynamo-llm = { workspace = true }
dynamo-runtime = { workspace = true }

dynamo-engine-mistralrs = { path = "../../lib/engines/mistralrs", optional = true }

anyhow = { workspace = true }
dynamo-async-openai = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3" }
regex = "1"

# Benchmark dependencies
inference-benchmarker = { path = "../../../pulsing/inference-benchmarker" }
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-eventsource = "0.6.0"
tokenizers = { version = "0.21.1", features = ["http"] }
hf-hub = { version = "0.4.2", features = ["tokio"] }
humantime = "2.1.0"
colored = "2.1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock", "now", "serde"] }
indicatif = "0.17.8"
rayon = "1.10.0"
sysinfo = "0.33.1"
tabled = "=0.14"
env_logger = "0.11.5"
log = "0.4.22"

[build-dependencies]
vergen-gitcl = "1.0"
anyhow = { workspace = true }
